--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -38,14 +38,14 @@
     --turquoise-500: #35646e;
 
     --green-default: #29663d;
-    --green-990: #19493E;
+    --green-990: #19493e;
     --green-900: #579e6f;
     --green-800: #7ecb98;
     --green-700: #b6e2c5;
     --green-600: #f0f9f3;
 
     --yellow-default: #776718;
-    --yellow-950: #FAB51E;
+    --yellow-950: #fab51e;
     --yellow-900: #d9c357;
     --yellow-800: #e9da8e;
     --yellow-700: #f5eecc;
