--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -55,7 +55,7 @@
     --orange-600: #f9f0ec;
 
     --red-default: #bf1a2f;
-    --red-950: #E54753;
+    --red-950: #e54753;
     --red-900: #e84855;
     --red-800: #e76f51;
     --red-700: #f4a261;
@@ -66,7 +66,7 @@
     --blue-800: #335c81;
     --blue-700: #5899e2;
     --blue-600: #65afff;
-    --blue-500: #7CBCC580;
+    --blue-500: #7cbcc580;
   }
 }
 
@@ -102,7 +102,7 @@ div {
 }
 
 .gradient-borders {
-  background: linear-gradient(180deg, #B0CBCF 0.01%, #E3F1F0 100%);
+  background: linear-gradient(180deg, #b0cbcf 0.01%, #e3f1f0 100%);
 }
 
 .gradient-selected {
