Added Select component

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -8,8 +8,8 @@
   :root {
     // Primary palette
     --mint-default: #1c373d;
-    --mint-900: #387682;
     --mint-950: #38768280;
+    --mint-900: #387682;
     --mint-800: #a1c6cc;
     --mint-700: #c9e2e7;
     --mint-600: #e3f1f0;
@@ -37,6 +37,7 @@
     --turquoise-500: #35646e;
 
     --green-default: #29663d;
+    --green-990: #19493E;
     --green-900: #579e6f;
     --green-800: #7ecb98;
     --green-700: #b6e2c5;
