--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -94,6 +94,36 @@ div {
   font-family: "Axiforma", sans-serif;
 }
 
+h1 {
+  font-size: 24px !important;
+  font-weight: 600 !important;
+  line-height: 31px !important;
+}
+
+h2 {
+  font-size: 21px !important;
+  font-weight: 600 !important;
+  line-height: 29.4px !important;
+}
+
+h3 {
+  font-size: 17px !important;
+  font-weight: 700 !important;
+  line-height: 24px !important;
+}
+
+h4 {
+  font-size: 15px !important;
+  font-weight: 400 !important;
+  line-height: 21px !important;
+}
+
+h5 {
+  font-size: 15px !important;
+  font-weight: 400 !important;
+  line-height: 19.5px !important;
+}
+
 .gradient-turquoise {
   background: linear-gradient(180deg, #5db2ac 0%, #336069 100%);
 }
