--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -11,6 +11,7 @@
     --mint-950: #38768280;
     --mint-900: #387682;
     --mint-800: #a1c6cc;
+    --mint-750: rgba(161, 198, 204, 0.5);
     --mint-700: #c9e2e7;
     --mint-600: #e3f1f0;
 
@@ -44,6 +45,7 @@
     --green-600: #f0f9f3;
 
     --yellow-default: #776718;
+    --yellow-950: #FAB51E;
     --yellow-900: #d9c357;
     --yellow-800: #e9da8e;
     --yellow-700: #f5eecc;
