--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -38,14 +38,14 @@
     --turquoise-500: #35646e;
 
     --green-default: #29663d;
-    --green-990: #19493E;
+    --green-990: #19493e;
     --green-900: #579e6f;
     --green-800: #7ecb98;
     --green-700: #b6e2c5;
     --green-600: #f0f9f3;
 
     --yellow-default: #776718;
-    --yellow-950: #FAB51E;
+    --yellow-950: #fab51e;
     --yellow-900: #d9c357;
     --yellow-800: #e9da8e;
     --yellow-700: #f5eecc;
@@ -178,7 +178,6 @@ h5 {
   color: var(--turquoise-500);
 }
 
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -192,19 +191,4 @@ h5 {
 
 .animate-fadeIn {
   animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes tooltip-appear {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-.animate-tooltip-appear {
-  animation: tooltip-appear 0.3s ease-out;
 }
