add: input secondary

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -36,6 +36,7 @@
     --turquoise-700: #c0eaed;
     --turquoise-600: #effafa;
     --turquoise-500: #35646e;
+    --turquoise-400: #84aeb7;
 
     --green-default: #29663d;
     --green-990: #19493e;
