--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -217,3 +217,10 @@ h5 {
   color: transparent;
   background-image: linear-gradient(180deg, #C9E2E7 8.26%, rgba(201, 226, 231, 0) 100%);
 }
+
+.practice-gradient-static {
+  background: linear-gradient(180deg, #C9E2E7 0.01%, #A1C6CC 92.81%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+}
