--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -15,6 +15,7 @@
     --mint-750: rgba(161, 198, 204, 0.5);
     --mint-700: #c9e2e7;
     --mint-600: #e3f1f0;
+    --mint-650: rgba(227, 241, 240, 0.5);
 
     --brown-default: #864c45;
     --brown-900: #cb6b39;
